@@ -1,4 +1,14 @@
 2015-09-15  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/util.c (crc32_add_16bytes): New faster algorith to
+	  compute crc 32
+	* common-src/util.c (crc32_add): Call crc32_add_1byte or
+	  crc32_add_16bytes.
+	* common-src/util.h (crc32_add_1byte, crc32_add_16bytes): Add new
+	  prototypes.
+	* common-src/Makefile.am (TEST): Add crc32-test
+	* common-src/crc32-test.c: New program to test crc32
+
+2015-09-15  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/debug.c (debug_ressource_usage): New function to write
 	  the system ressource utilization to the debug file
 	* common-src/debug.c (debug_close): Call debug_ressource_usage
